--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,1 +1,278 @@
-{}
+{
+    "translation": {
+        "common": {
+            "loading": "Loading...",
+            "error": "An unexpected error occurred.",
+            "validationError": "Validation error",
+            "today": "Today",
+            "yesterday": "Yesterday",
+            "cancel": "Cancel"
+        },
+        "home": {
+            "title": "Home Screen",
+            "description": "Here you will find wallet cards and recent transactions.",
+            "addMoney": "Top Up",
+            "exchange": "Exchange",
+            "withdraw": "Withdraw",
+            "recentTransactions": "Recent transactions",
+            "seeAll": "See all",
+            "loadError": "Failed to load data"
+        },
+        "transactions": {
+            "historyTitle": "Transaction history",
+            "empty": "You have no transactions yet.",
+            "unknown": "Unknown transaction",
+            "date": "Date",
+            "id": "ID",
+            "received": "Received",
+            "needHelp": "Need help?",
+            "contactSupport": "Contact support",
+            "creditedTo": "Credited currency",
+            "debitedFrom": "Debited currency",
+            "sentAmount": "Exchanged",
+            "rateUsed": "Exchange rates",
+            "receivedAmount": "Received amount",
+            "endOfList": "No more transactions",
+            "type": {
+                "topup": "Top-up",
+                "exchange": "Exchange",
+                "withdraw": "Withdrawal"
+            }
+        },
+        "settings": {
+            "title": "Settings",
+            "languageTitle": "Change language to English",
+            "changePasswordTitle": "Change password",
+            "changePasswordButton": "Change password",
+            "logout": "Log out",
+            "oldPassword": "Old password",
+            "newPassword": "New password"
+        },
+        "login": {
+            "title": "Login",
+            "password": "Password",
+            "button": "Log in",
+            "registerLink": "Don't have an account? Register",
+            "errorTitle": "Invalid email or password."
+        },
+        "register": {
+            "title": "Register",
+            "password": "Password",
+            "confirmPassword": "Confirm password",
+            "button": "Register",
+            "loginLink": "Already have an account? Log in",
+            "errorTitle": "Registration error",
+            "errorPasswordMismatch": "Passwords do not match.",
+            "errorEmailExists": "This email is already taken.",
+            "errorGeneral": "An error occurred. Please try again.",
+            "successTitle": "Registration Successful",
+            "successMessage": "Registration completed! You can now log in."
+        },
+        "topup": {
+            "title": "Top up account",
+            "amount": "Amount",
+            "currency": "Currency",
+            "cardNumber": "Card number",
+            "expiry": "Expiry date",
+            "cvv": "CVV code",
+            "button": "Top up account",
+            "successTitle": "Top-up successful",
+            "successMessage": "Your account has been topped up with {{amount}} {{currency}}.",
+            "errorTitle": "Top-up error",
+            "validation": {
+                "invalidAmount": "Please enter a valid positive amount.",
+                "invalidCard": "Please enter a valid 16-digit card number.",
+                "invalidExpiryFormat": "Expiry date must be in MM/YY format.",
+                "cardExpired": "The card has expired.",
+                "invalidCvv": "CVV code must be 3 digits."
+            }
+        },
+        "exchange": {
+            "title": "Currency exchange",
+            "from": "From",
+            "to": "To",
+            "balance": "Balance",
+            "calculating": "Calculating...",
+            "button": "Exchange",
+            "successTitle": "Exchange successful",
+            "successMessage": "Exchanged {{fromAmount}} {{fromCurrency}} to {{toAmount}} {{toCurrency}}.",
+            "errorTitle": "Exchange error",
+            "validation": {
+                "invalidAmount": "Please enter a valid positive amount.",
+                "sameCurrency": "Source and target currency must be different.",
+                "insufficientFunds": "Insufficient funds.",
+                "rateError": "Could not fetch exchange rate: {{message}}"
+            }
+        },
+        "currencyPicker": {
+            "title": "Choose currency",
+            "searchPlaceholder": "Search (e.g. EUR or Euro)...",
+            "empty": "No currencies found."
+        },
+        "withdraw": {
+            "title": "Withdraw from account",
+            "selectWallet": "Select currency",
+            "amount": "Amount",
+            "iban": "IBAN",
+            "button": "Withdraw",
+            "available": "Available",
+            "successTitle": "Withdrawal successful",
+            "successMessage": "Successfully withdrew {{amount}} {{currency}} from your account."
+        },
+        "rates": {
+            "title": "Current exchange rates"
+        },
+        "currencies": {
+            "pln": "Polish Zloty",
+            "usd": "US Dollar",
+            "eur": "Euro",
+            "chf": "Swiss Franc",
+            "gbp": "Pound Sterling",
+            "jpy": "Yen (Japan)",
+            "czk": "Czech Koruna",
+            "aud": "Australian Dollar",
+            "cad": "Canadian Dollar",
+            "dkk": "Danish Krone",
+            "huf": "Forint (Hungary)",
+            "nok": "Norwegian Krone",
+            "sek": "Swedish Krona",
+            "uah": "Ukrainian Hryvnia",
+            "thb": "Baht (Thailand)",
+            "hkd": "Hong Kong Dollar",
+            "nzd": "New Zealand Dollar",
+            "sgd": "Singapore Dollar",
+            "isk": "Icelandic Króna",
+            "ron": "Romanian Leu",
+            "bgn": "Bulgarian Lev",
+            "try": "Turkish Lira",
+            "ils": "New Israeli Shekel",
+            "clp": "Chilean Peso",
+            "php": "Philippine Peso",
+            "mxn": "Mexican Peso",
+            "zar": "Rand (South Africa)",
+            "brl": "Brazilian Real",
+            "myr": "Malaysian Ringgit",
+            "idr": "Indonesian Rupiah",
+            "inr": "Indian Rupee",
+            "krw": "South Korean Won",
+            "cny": "Yuan Renminbi (China)",
+            "xdr": "SDR (IMF)",
+            "afn": "Afghan Afghani",
+            "mga": "Malagasy Ariary",
+            "pab": "Panamanian Balboa",
+            "etb": "Ethiopian Birr",
+            "ves": "Venezuelan Bolívar Soberano",
+            "bob": "Boliviano (Bolivia)",
+            "crc": "Costa Rican Colón",
+            "svc": "Salvadoran Colón",
+            "nio": "Nicaraguan Córdoba Oro",
+            "gmd": "Gambian Dalasi",
+            "mkd": "Macedonian Denar",
+            "dzd": "Algerian Dinar",
+            "bhd": "Bahraini Dinar",
+            "iqd": "Iraqi Dinar",
+            "jod": "Jordanian Dinar",
+            "kwd": "Kuwaiti Dinar",
+            "lyd": "Libyan Dinar",
+            "rsd": "Serbian Dinar",
+            "tnd": "Tunisian Dinar",
+            "mad": "Moroccan Dirham",
+            "aed": "UAE Dirham",
+            "stn": "São Tomé and Príncipe Dobra",
+            "bsd": "Bahamian Dollar",
+            "bbd": "Barbadian Dollar",
+            "bzd": "Belize Dollar",
+            "bnd": "Brunei Dollar",
+            "fjd": "Fijian Dollar",
+            "gyd": "Guyanese Dollar",
+            "jmd": "Jamaican Dollar",
+            "lrd": "Liberian Dollar",
+            "nad": "Namibian Dollar",
+            "srd": "Surinamese Dollar",
+            "ttd": "Trinidad and Tobago Dollar",
+            "xcd": "East Caribbean Dollar",
+            "sbd": "Solomon Islands Dollar",
+            "vnd": "Vietnamese Dong",
+            "amd": "Armenian Dram",
+            "cve": "Cape Verdean Escudo",
+            "awg": "Aruban Florin",
+            "bif": "Burundian Franc",
+            "xof": "CFA Franc BCEAO",
+            "xaf": "CFA Franc BEAC",
+            "xpf": "CFP Franc",
+            "djf": "Djiboutian Franc",
+            "gnf": "Guinean Franc",
+            "kmf": "Comorian Franc",
+            "cdf": "Congolese Franc (DRC)",
+            "rwf": "Rwandan Franc",
+            "egp": "Egyptian Pound",
+            "gip": "Gibraltar Pound",
+            "lbp": "Lebanese Pound",
+            "ssp": "South Sudanese Pound",
+            "sdg": "Sudanese Pound",
+            "syp": "Syrian Pound",
+            "ghs": "Ghanaian Cedi",
+            "htg": "Haitian Gourde",
+            "pyg": "Paraguayan Guaraní",
+            "xcg": "Caribbean Guilder",
+            "pgk": "Papua New Guinean Kina",
+            "lak": "Lao Kip",
+            "mwk": "Malawian Kwacha",
+            "zmw": "Zambian Kwacha",
+            "aoa": "Angolan Kwanza",
+            "mmk": "Myanmar Kyat",
+            "gel": "Georgian Lari",
+            "mdl": "Moldovan Leu",
+            "all": "Albanian Lek",
+            "hnl": "Honduran Lempira",
+            "sle": "Sierra Leonean Leone",
+            "szl": "Swazi Lilangeni",
+            "lsl": "Lesotho Loti",
+            "azn": "Azerbaijani Manat",
+            "mzn": "Mozambican Metical",
+            "ngn": "Nigerian Naira",
+            "ern": "Eritrean Nakfa",
+            "twd": "New Taiwan Dollar",
+            "tmt": "Turkmenistani New Manat",
+            "mru": "Mauritanian Ouguiya",
+            "top": "Tongan Pa'anga",
+            "mop": "Macanese Pataca",
+            "ars": "Argentine Peso",
+            "dop": "Dominican Peso",
+            "cop": "Colombian Peso",
+            "cup": "Cuban Peso",
+            "uyu": "Uruguayan Peso",
+            "bwp": "Botswanan Pula",
+            "gtq": "Guatemalan Quetzal",
+            "irr": "Iranian Rial",
+            "yer": "Yemeni Rial",
+            "qar": "Qatari Riyal",
+            "omr": "Omani Rial",
+            "sar": "Saudi Riyal",
+            "khr": "Cambodian Riel",
+            "byn": "Belarusian Ruble",
+            "rub": "Russian Ruble",
+            "lkr": "Sri Lankan Rupee",
+            "mvr": "Maldivian Rufiyaa",
+            "mur": "Mauritian Rupee",
+            "npr": "Nepalese Rupee",
+            "pkr": "Pakistani Rupee",
+            "scr": "Seychellois Rupee",
+            "pen": "Peruvian Sol",
+            "kgs": "Kyrgyzstani Som",
+            "tjs": "Tajikistani Somoni",
+            "uzs": "Uzbekistani So'm",
+            "kes": "Kenyan Shilling",
+            "sos": "Somali Shilling",
+            "tzs": "Tanzanian Shilling",
+            "ugx": "Ugandan Shilling",
+            "bdt": "Bangladeshi Taka",
+            "wst": "Samoan Tala",
+            "kzt": "Kazakhstani Tenge",
+            "mnt": "Mongolian Tögrög",
+            "vuv": "Vanuatu Vatu",
+            "bam": "Convertible Mark (Bosnia and Herzegovina)",
+            "zwg": "Zimbabwe Gold"
+        }
+    }
+}
