--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,1 +1,278 @@
-{}
+{
+    "translation": {
+        "common": {
+            "loading": "Wczytywanie...",
+            "error": "Wystąpił nieoczekiwany błąd.",
+            "validationError": "Błąd walidacji",
+            "today": "Dzisiaj",
+            "yesterday": "Wczoraj",
+            "cancel": "Anuluj"
+        },
+        "home": {
+            "title": "Ekran Główny",
+            "description": "Tutaj będą karty portfeli i ostatnie transakcje.",
+            "addMoney": "Doładuj",
+            "exchange": "Wymień",
+            "withdraw": "Wypłać",
+            "recentTransactions": "Ostatnie transakcje",
+            "seeAll": "Zobacz wszystko",
+            "loadError": "Błąd ładowania danych"
+        },
+        "transactions": {
+            "historyTitle": "Historia transakcji",
+            "empty": "Nie masz jeszcze żadnych transakcji.",
+            "unknown": "Nieznana transakcja",
+            "date": "Data",
+            "id": "ID",
+            "received": "Otrzymano",
+            "needHelp": "Potrzebujesz pomocy?",
+            "contactSupport": "Skontaktuj się z supportem",
+            "creditedTo": "Doładowana waluta",
+            "debitedFrom": "Wypłacona waluta",
+            "sentAmount": "Wymieniono",
+            "rateUsed": "Kursy wymiany",
+            "receivedAmount": "Otrzymano",
+            "endOfList": "Brak kolejnych transakcji",
+            "type": {
+                "topup": "Doładowanie",
+                "exchange": "Wymiana",
+                "withdraw": "Wypłata"
+            }
+        },
+        "settings": {
+            "title": "Ustawienia",
+            "languageTitle": "Zmień język na Angielski",
+            "changePasswordTitle": "Zmień hasło",
+            "changePasswordButton": "Zmień hasło",
+            "logout": "Wyloguj",
+            "oldPassword": "Stare hasło",
+            "newPassword": "Nowe hasło"
+        },
+        "login": {
+            "title": "Logowanie",
+            "password": "Hasło",
+            "button": "Zaloguj",
+            "registerLink": "Nie masz konta? Zarejestruj się",
+            "errorTitle": "Nieprawidłowy e-mail lub hasło."
+        },
+        "register": {
+            "title": "Rejestracja",
+            "password": "Hasło",
+            "confirmPassword": "Potwierdź hasło",
+            "button": "Zarejestruj",
+            "loginLink": "Masz już konto? Zaloguj się",
+            "errorTitle": "Błąd rejestracji",
+            "errorPasswordMismatch": "Hasła nie są takie same.",
+            "errorEmailExists": "Ten e-mail jest już zajęty.",
+            "errorGeneral": "Wystąpił błąd. Spróbuj ponownie.",
+            "successTitle": "Rejestracja Udana",
+            "successMessage": "Rejestracja pomyślna! Możesz się zalogować."
+        },
+        "topup": {
+            "title": "Doładuj konto",
+            "amount": "Kwota",
+            "currency": "Waluta",
+            "cardNumber": "Numer karty",
+            "expiry": "Data ważności",
+            "cvv": "Kod CVV",
+            "button": "Doładuj konto",
+            "successTitle": "Doładowanie udane",
+            "successMessage": "Pomyślnie doładowano konto kwotą {{amount}} {{currency}}.",
+            "errorTitle": "Błąd doładowania",
+            "validation": {
+                "invalidAmount": "Proszę podać poprawną, dodatnią kwotę.",
+                "invalidCard": "Proszę podać poprawny 16-cyfrowy numer karty.",
+                "invalidExpiryFormat": "Data ważności musi być w formacie MM/RR.",
+                "cardExpired": "Karta jest nieważna.",
+                "invalidCvv": "Kod CVV musi składać się z 3 cyfr."
+            }
+        },
+        "exchange": {
+            "title": "Wymiana walut",
+            "from": "Z",
+            "to": "Na",
+            "balance": "Saldo",
+            "calculating": "Obliczanie...",
+            "button": "Wymień",
+            "successTitle": "Wymiana udana",
+            "successMessage": "Wymieniono {{fromAmount}} {{fromCurrency}} na {{toAmount}} {{toCurrency}}.",
+            "errorTitle": "Błąd wymiany",
+            "validation": {
+                "invalidAmount": "Proszę podać poprawną, dodatnią kwotę.",
+                "sameCurrency": "Waluta źródłowa i docelowa muszą być różne.",
+                "insufficientFunds": "Niewystarczające środki.",
+                "rateError": "Nie można pobrać kursu: {{message}}"
+            }
+        },
+        "currencyPicker": {
+            "title": "Wybierz walutę",
+            "searchPlaceholder": "Szukaj (np. EUR lub Euro)...",
+            "empty": "Nie znaleziono walut."
+        },
+        "withdraw": {
+            "title": "Wypłata z konta",
+            "selectWallet": "Wybierz walutę",
+            "amount": "Kwota",
+            "iban": "IBAN",
+            "button": "Wypłać",
+            "available": "Dostępne",
+            "successTitle": "Wypłata środków udana",
+            "successMessage": "Pomyślnie wypłaciłeś {{amount}} {{currency}} ze swojego konta."
+        },
+        "rates": {
+            "title": "Aktualne kursy walut"
+        },
+        "currencies": {
+            "pln": "Złoty polski",
+            "usd": "Dolar amerykański",
+            "eur": "Euro",
+            "chf": "Frank szwajcarski",
+            "gbp": "Funt szterling",
+            "jpy": "Jen (Japonia)",
+            "czk": "Korona czeska",
+            "aud": "Dolar australijski",
+            "cad": "Dolar kanadyjski",
+            "dkk": "Korona duńska",
+            "huf": "Forint (Węgry)",
+            "nok": "Korona norweska",
+            "sek": "Korona szwedzka",
+            "uah": "Hrywna (Ukraina)",
+            "thb": "Bat (Tajlandia)",
+            "hkd": "Dolar Hongkongu",
+            "nzd": "Dolar nowozelandzki",
+            "sgd": "Dolar singapurski",
+            "isk": "Korona islandzka",
+            "ron": "Lej rumuński",
+            "bgn": "Lew (Bułgaria)",
+            "try": "Lira turecka",
+            "ils": "Nowy izraelski szekel",
+            "clp": "Peso chilijskie",
+            "php": "Peso filipińskie",
+            "mxn": "Peso meksykańskie",
+            "zar": "Rand (Republika Południowej Afryki)",
+            "brl": "Real (Brazylia)",
+            "myr": "Ringgit (Malezja)",
+            "idr": "Rupia indonezyjska",
+            "inr": "Rupia indyjska",
+            "krw": "Won południowokoreański",
+            "cny": "Yuan renminbi (Chiny)",
+            "xdr": "SDR (MFW)",
+            "afn": "Afgani (Afganistan)",
+            "mga": "Ariary (Madagaskar)",
+            "pab": "Balboa (Panama)",
+            "etb": "Birr etiopski",
+            "ves": "Boliwar soberano (Wenezuela)",
+            "bob": "Boliwiano (Boliwia)",
+            "crc": "Colon kostarykański",
+            "svc": "Colon salwadorski",
+            "nio": "Cordoba oro (Nikaragua)",
+            "gmd": "Dalasi (Gambia)",
+            "mkd": "Denar (Macedonia Północna)",
+            "dzd": "Dinar algierski",
+            "bhd": "Dinar bahrajski",
+            "iqd": "Dinar iracki",
+            "jod": "Dinar jordański",
+            "kwd": "Dinar kuwejcki",
+            "lyd": "Dinar libijski",
+            "rsd": "Dinar serbski",
+            "tnd": "Dinar tunezyjski",
+            "mad": "Dirham marokański",
+            "aed": "Dirham ZEA (Zjednoczone Emiraty Arabskie)",
+            "stn": "Dobra (Wyspy Świętego Tomasza i Książęca)",
+            "bsd": "Dolar bahamski",
+            "bbd": "Dolar barbadoski",
+            "bzd": "Dolar belizeński",
+            "bnd": "Dolar brunejski",
+            "fjd": "Dolar Fidżi",
+            "gyd": "Dolar gujański",
+            "jmd": "Dolar jamajski",
+            "lrd": "Dolar liberyjski",
+            "nad": "Dolar namibijski",
+            "srd": "Dolar surinamski",
+            "ttd": "Dolar Trynidadu i Tobago",
+            "xcd": "Dolar wschodniokaraibski",
+            "sbd": "Dolar Wysp Salomona",
+            "vnd": "Dong (Wietnam)",
+            "amd": "Dram (Armenia)",
+            "cve": "Escudo Zielonego Przylądka",
+            "awg": "Florin arubański",
+            "bif": "Frank burundyjski",
+            "xof": "Frank CFA BCEAO",
+            "xaf": "Frank CFA BEAC",
+            "xpf": "Frank CFP",
+            "djf": "Frank Dżibuti",
+            "gnf": "Frank gwinejski",
+            "kmf": "Frank Komorów",
+            "cdf": "Frank kongijski (Dem. Republika Konga)",
+            "rwf": "Frank rwandyjski",
+            "egp": "Funt egipski",
+            "gip": "Funt gibraltarski",
+            "lbp": "Funt libański",
+            "ssp": "Funt południowosudański",
+            "sdg": "Funt sudański",
+            "syp": "Funt syryjski",
+            "ghs": "Ghana cedi",
+            "htg": "Gourde (Haiti)",
+            "pyg": "Guarani (Paragwaj)",
+            "xcg": "Gulden karaibski",
+            "pgk": "Kina (Papua-Nowa Gwinea)",
+            "lak": "Kip (Laos)",
+            "mwk": "Kwacha malawijska",
+            "zmw": "Kwacha zambijska",
+            "aoa": "Kwanza (Angola)",
+            "mmk": "Kyat (Myanmar, Birma)",
+            "gel": "Lari (Gruzja)",
+            "mdl": "Lej Mołdawii",
+            "all": "Lek (Albania)",
+            "hnl": "Lempira (Honduras)",
+            "sle": "Leone (Sierra Leone)",
+            "szl": "Lilangeni (Eswatini)",
+            "lsl": "Loti (Lesotho)",
+            "azn": "Manat azerbejdżański",
+            "mzn": "Metical (Mozambik)",
+            "ngn": "Naira (Nigeria)",
+            "ern": "Nakfa (Erytrea)",
+            "twd": "Nowy dolar tajwański",
+            "tmt": "Nowy manat (Turkmenistan)",
+            "mru": "Ouguiya (Mauretania)",
+            "top": "Pa'anga (Tonga)",
+            "mop": "Pataca (Makau)",
+            "ars": "Peso argentyńskie",
+            "dop": "Peso dominikańskie",
+            "cop": "Peso kolumbijskie",
+            "cup": "Peso kubańskie",
+            "uyu": "Peso urugwajskie",
+            "bwp": "Pula (Botswana)",
+            "gtq": "Quetzal (Gwatemala)",
+            "irr": "Rial irański",
+            "yer": "Rial jemeński",
+            "qar": "Rial katarski",
+            "omr": "Rial omański",
+            "sar": "Rial saudyjski",
+            "khr": "Riel (Kambodża)",
+            "byn": "Rubel białoruski",
+            "rub": "Rubel rosyjski",
+            "lkr": "Rupia lankijska",
+            "mvr": "Rupia (Malediwy)",
+            "mur": "Rupia Mauritiusu",
+            "npr": "Rupia nepalska",
+            "pkr": "Rupia pakistańska",
+            "scr": "Rupia seszelska",
+            "pen": "Sol (Peru)",
+            "kgs": "Som (Kirgistan)",
+            "tjs": "Somoni (Tadżykistan)",
+            "uzs": "Sum (Uzbekistan)",
+            "kes": "Szyling kenijski",
+            "sos": "Szyling somalijski",
+            "tzs": "Szyling tanzański",
+            "ugx": "Szyling ugandyjski",
+            "bdt": "Taka (Bangladesz)",
+            "wst": "Tala (Samoa)",
+            "kzt": "Tenge (Kazachstan)",
+            "mnt": "Tugrik (Mongolia)",
+            "vuv": "Vatu (Vanuatu)",
+            "bam": "Wymienialna marka (Bośnia i Hercegowina)",
+            "zwg": "Złoto Zimbabwe"
+        }
+    }
+}
